--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-8-basic-authentication-example": {
+    "soda-parking-admin-panel": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -28,7 +28,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less"
+              "src/styles.less",
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/purple-green.css"
+              }
             ],
             "scripts": []
           },
@@ -62,19 +65,19 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-8-basic-authentication-example:build",
+            "browserTarget": "soda-parking-admin-panel:build",
             "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-8-basic-authentication-example:build:production"
+              "browserTarget": "soda-parking-admin-panel:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-8-basic-authentication-example:build"
+            "browserTarget": "soda-parking-admin-panel:build"
           }
         },
         "test": {
@@ -89,7 +92,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less"
+              "src/styles.less",
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/purple-green.css"
+              }
             ],
             "scripts": []
           }
@@ -111,15 +117,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-8-basic-authentication-example:serve"
+            "devServerTarget": "soda-parking-admin-panel:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular-8-basic-authentication-example:serve:production"
+              "devServerTarget": "soda-parking-admin-panel:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "angular-8-basic-authentication-example"
+  "defaultProject": "soda-parking-admin-panel"
 }
